# show-renamer

./: Cargo.toml  README.md
.github/workflows/: auto-release.yml  deb-release-12.yml  rpm-release-el8.yml  rpm-release-el9.yml
.rpm/: show-renamer.spec
src/: cli.rs  constants.rs  lib.rs  main.rs  utils.rs
src/actions/: rename.rs
