[package]
name = "show-renamer"
version = "0.1.1"
authors = ["nbrandolino nickbrandolino134@gmail.com"]
edition = "2024"

[profile.release]
debug = false
opt-level = "z"
panic = "abort"
strip = true

[profile.development]
codegen-units = 256
debug-assertions = true
debug = true
incremental = true
inherits = "dev"
lto = "off"
opt-level = 0
overflow-checks = true
panic = "unwind"
split-debuginfo = "..."

[dependencies]
clap = "4.5"

[lib]
name = "show_renamer"
path = "src/lib.rs"
