[package]
name = "show-renamer"
version = "0.1.4"
authors = ["nbrandolino nickbrandolino134@gmail.com"]
description = "A command-line utility written in Rust, designed to rename the Seasons and Episodes of a TV show."
license = "GPL"
edition = "2021"

[profile.release]
debug = false
opt-level = "z"
panic = "abort"
strip = true

[profile.development]
codegen-units = 256
debug-assertions = true
debug = true
incremental = true
inherits = "dev"
lto = "off"
opt-level = 0
overflow-checks = true
panic = "unwind"

[dependencies]
clap = "4.5"

[lib]
name = "show_renamer"
path = "src/lib.rs"
